# app.js
@@ -8,11 +8,11 @@ import cors from "cors";
 // Routers
 import hilfestellesRouter from "./routes/hilfestelle-routes.js";
 import kantonsRouter from "./routes/kanton-routes.js";
-import enrollmentsRouter from "./routes/enrollment-routes";
+
 import adressesRouter from "./routes/adresse-routes.js";
 import hilfartsRouter from "./routes/hilfart-routes.js";
-
-let app = express();
+import enrollmentsRouter from "./routes/enrollment-routes.js";
+const app = express();
 
 app.use(logger("dev"));
 app.use(express.json());
@@ -25,7 +25,7 @@ app.use("/kantons", kantonsRouter);
 
 app.use("/adresses", adressesRouter);
 app.use("/hilfarts", hilfartsRouter);
-
+app.use("/enrollments", enrollmentsRouter);
 app.listen(4000, () => {
   console.log("Server started on: " + 4000);
 });
